# sbomify-snapcraft

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
sbomify_snapcraft/: __init__.py  cli.py  parser.py  sbom_generator.py
tests/: __init__.py  test_cli.py  test_parser.py  test_sbom_generator.py
tests/fixtures/: test_snapcraft.yaml
